lib/libremidi/tests/corpus/Invalid/No Header Chunk/nagano.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|07 Aug 2002 05:22:44 -0000
vti_author:SR|lostface
vti_modifiedby:SR|lostface
vti_timecreated:TR|22 Jan 2001 03:42:22 -0000
vti_backlinkinfo:VX|music/nagnao.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\olympic web/c\:/olympic web:TR|22 Jan 2001 01:28:36 -0000
vti_nexttolasttimemodified:TR|22 Jan 2001 01:28:36 -0000
vti_syncwith_localhost\\c\:\\documents and settings\\ben\\my documents\\my webs\\myweb2/c\:/documents and settings/ben/my documents/my webs/myweb2:TR|07 Aug 2002 05:22:44 -0000
